--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PIT Deodoro Roca</title>
+    <link rel="icon" type="image/x-icon" href="imagenes/PIT.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+    <div class="bar">
+    <nav class="nav">
+        <div class="nav-content">
+            <div class="logo">
+        <img src="imagenes/PIT.png" alt="logo">
+    </div>
+        <ul>
+            <li>NOSOTROS</li>
+            <li>INSTITUCIONAL</li>
+            <li>INSCRIPCIONES</li>
+            <li>CONTACTO</li>
+        </ul>
+    </div>
+    </nav>
+</div>
+</header>
+<div class="imagen">
+    <img src="imagenes/patio.jpg" alt="imagen-institucion">
+</div>
+<div class="objetivo">
+    <div class="nivel">
+    <p>NIVEL SECUNDARIO</p>
+    <h1>UN LUGAR PARA PROYECTARSE HACIA EL FUTURO</h1>
+</div>
+    <p class="parrafo">Construí tu propio trayecto formativo y finalizá tus estudios. La propuesta reconoce los recorridos educativos previos  y establece un sistema de promoción por asignaturas de manera tal de permitirte avanzar en función de un régimen de correlatividades.</p>
+    <button>VER MÁS</button>
+</div>
     <script src="main.js"> </script>
 </body>
 </html>
