--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
     <p class="parrafo">Construí tu propio trayecto formativo y finalizá tus estudios. La propuesta reconoce los recorridos educativos previos  y establece un sistema de promoción por asignaturas de manera tal de permitirte avanzar en función de un régimen de correlatividades.</p>
     <button>VER MÁS</button>
 </div>
+
+<div class="finaliza">
+<div class="imagen2">
+    <img src="imagenes/estudiante.jpg" alt="imagen de estudiantes">
+</div>
+<div class="inscripciones">
+    <h2>INSCRIPCIONES</h2>
+    <p>2024</p>
+    <button>INGRESAR</button>
+</div>
+</div>
+
     <script src="main.js"> </script>
 </body>
 </html>
