--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
             <li>NOSOTROS</li>
             <li>INSTITUCIONAL</li>
-            <li>INSCRIPCIONES</li>
+            <li><a href="#inscripciones" class="enlaces">INSCRIPCIONES</a></li>
             <li>CONTACTO</li>
         </ul>
     </div>
@@ -41,7 +41,7 @@
 <div class="imagen2">
     <img src="imagenes/estudiante.jpg" alt="imagen de estudiantes">
 </div>
-<div class="inscripciones">
+<div class="inscripciones" id="inscripciones">
     <h2>INSCRIPCIONES</h2>
     <p>2024</p>
     <button>INGRESAR</button>
