--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
     </nav>
 </div>
 </header>
-<div class="imagen">
-    <img src="imagenes/patio.jpg" alt="imagen-institucion">
+
+<div class="img">
+    <div class="overlay">
+        <div class="overlay-text">PIT DEODORO ROCA</div></div>
 </div>
+    
+
 <div class="objetivo">
     <div class="nivel">
     <p>NIVEL SECUNDARIO</p>
