--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="imagenes/PIT.png" alt="logo">
     </div>
         <ul>
-            <li>NOSOTROS</li>
+            <li><a href="#nosotros" class="enlaces">NOSOTROS</a></li>
             <li>INSTITUCIONAL</li>
             <li><a href="#inscripciones" class="enlaces">INSCRIPCIONES</a></li>
             <li>CONTACTO</li>
@@ -39,7 +39,7 @@
     <h1>UN LUGAR PARA PROYECTARSE HACIA EL FUTURO</h1>
 </div>
     <p class="parrafo">Construí tu propio trayecto formativo y finalizá tus estudios. La propuesta reconoce los recorridos educativos previos  y establece un sistema de promoción por asignaturas de manera tal de permitirte avanzar en función de un régimen de correlatividades.</p>
-    <button>VER MÁS</button>
+    <button><a href="#nosotros" class="enlaces">VER MÁS</a></button>
 </div>
 
 <div class="finaliza">
@@ -69,9 +69,32 @@
         <button class="matricula"><a href="https://formularioinscripcion.cba.gov.ar/fup/home" target="_blank" class="enlaceMatri">MATRICULARME</a></button>
     </div>
 </div>
+</div>
+<div class="nosotros" id="nosotros">
+    <h1>Programa PIT Deodoro Roca</h1>
+    <div class="texnosotros">
 
+<p>El Programa de Inclusión para la Terminalidad (P.I.T.) es una propuesta educativa destinada a jóvenes de 14 a 17 años, que acerca la oportunidad de completar los estudios secundarios obligatorios.
 
-
+    El Programa atiende las diversas historias escolares de las y los estudiantes a través de un Trayecto Formativo Integrado, que incluye espacios curriculares obligatorios (saberes básicos), complementarios y tutorías de apoyo para contenidos y aprendizajes prioritarios. El diseño flexible permite la asistencia y promoción por espacio curricular.
+    <div class="tex2">
+    Quienes completan la totalidad del trayecto reciben el Título de Bachiller en Ciencias Sociales, como también pueden obtener certificaciones por formación laboral y profesional.
+    
+    El P.I.T. brinda la posibilidad de finalizar la escuela, acceder a aprendizajes de calidad y alcanzar una mayor inclusión e igualdad en el mundo del trabajo. A través de estas políticas, el Estado promueve el regreso de las y los jóvenes a las aulas y el acceso a la educación secundaria obligatoria como un derecho social.</p>
+</div>
+</div> 
+<div class="buttonsNosostros">
+<button class="curricula"><a href="https://drive.google.com/file/d/1whpgP6CdwKnLnuUxZTnOnf1kOH07euAh/view?usp=sharing" target="_blank" class="enlacecurricula">Propuesta Curricular</a></button>
+<button class="curricula"><a href="https://docs.google.com/document/d/1Yg6y5bKvlGtGVomML0zA4E6QqgxKDjbp/edit?usp=sharing&ouid=117493803333826530679&rtpof=true&sd=true" target="_blank" class="enlaceEstructura">Estructura Curricular</a></button>
+</div>
+<div class="footer">
+<footer>
+    <h5>DIRECCIÓN</h5>
+    <p>Pedro Luis de Cabrera 3070
+    <br>Barrio Santa Isabel</p>
+    <h5>SEGUINOS</h5>
+</footer>
+</div>
 
     <script src="main.js"> </script>
 </body>
