--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#nosotros" class="enlaces">NOSOTROS</a></li>
             <li>INSTITUCIONAL</li>
             <li><a href="#inscripciones" class="enlaces">INSCRIPCIONES</a></li>
-            <li>CONTACTO</li>
+            <li><a href="#contacto" class="enlaces">CONTACTO</a></li>
         </ul>
     </div>
     </nav>
@@ -54,7 +54,7 @@
 
     <button id="mostrarTarjeta">INGRESAR</button>
     <div id="tarjeta" class="oculto">
-        <h1>Requisitos</h1>
+        <h1>REQUISITOS</h1>
         <ul>
             <li><span class="material-symbols-outlined">
                 check_small
@@ -87,14 +87,26 @@
 <button class="curricula"><a href="https://drive.google.com/file/d/1whpgP6CdwKnLnuUxZTnOnf1kOH07euAh/view?usp=sharing" target="_blank" class="enlacecurricula">Propuesta Curricular</a></button>
 <button class="curricula"><a href="https://docs.google.com/document/d/1Yg6y5bKvlGtGVomML0zA4E6QqgxKDjbp/edit?usp=sharing&ouid=117493803333826530679&rtpof=true&sd=true" target="_blank" class="enlaceEstructura">Estructura Curricular</a></button>
 </div>
-<div class="footer">
+</div>
+
+<div class="footer" id="contacto">
+
 <footer>
     <h5>DIRECCIÓN</h5>
     <p>Pedro Luis de Cabrera 3070
     <br>Barrio Santa Isabel</p>
-    <h5>SEGUINOS</h5>
-</footer>
+
+
+    <div class="redes">
+    
+       <a href="https://www.instagram.com/pit.ipem40/" target="_blank">
+        <img src="imagenes/inst.png" alt="logo instagram">
 </div>
+</div>
+</footer>
+
+
+
 
     <script src="main.js"> </script>
 </body>
