--- a/index.html
+++ b/index.html
@@ -92,17 +92,21 @@
 <div class="footer" id="contacto">
 
 <footer>
-    <h5>DIRECCIÓN</h5>
-    <p>Pedro Luis de Cabrera 3070
-    <br>Barrio Santa Isabel</p>
-
-
+    <div class="direccion">
+        <h5>DIRECCIÓN</h5>
+        <p>Pedro Luis de Cabrera 3070<br>Barrio Santa Isabel</p>
+    </div>
     <div class="redes">
-    
-       <a href="https://www.instagram.com/pit.ipem40/" target="_blank">
-        <img src="imagenes/inst.png" alt="logo instagram">
-</div>
-</div>
+    <a href="https://www.instagram.com/pit.ipem40/" target="_blank" >
+            <img src="imagenes/inst.png" alt="logo instagram">
+        </a>
+        <a href="https://taplink.cc/pitdeodororoca" target="_blank" >
+            <img src="imagenes/taplink.png" alt="logo taplink">
+        </a>
+        <a href="https://linktr.ee/pitdeodororoca" target="_blank" >
+            <img src="imagenes/link.png" alt="logo linktree">
+        </a>
+    </div>
 </footer>
 
 
