--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="icon" type="image/x-icon" href="imagenes/PIT.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 <body>
     <header>
-    <div class="bar">
+    <div class="bar" id="inicio">
     <nav class="nav">
         <div class="nav-content">
             <div class="logo">
@@ -50,7 +51,7 @@
 
 <div class="inscripciones" id="inscripciones">
     <h2>INSCRIPCIONES</h2>
-    <p>2024</p>
+    <p>2025</p>
 
     <button id="mostrarTarjeta">INGRESAR</button>
     <div id="tarjeta" class="oculto">
@@ -69,6 +70,11 @@
         <button class="matricula"><a href="https://formularioinscripcion.cba.gov.ar/fup/home" target="_blank" class="enlaceMatri">MATRICULARME</a></button>
     </div>
 </div>
+</div>
+<div class="contenedorflecha">
+<span class="material-symbols-outlined"><a href="#inicio">
+    arrow_upward</a>
+    </span>
 </div>
 <div class="nosotros" id="nosotros">
     <h1>Programa PIT Deodoro Roca</h1>
@@ -92,11 +98,13 @@
 <div class="footer" id="contacto">
 
 <footer>
+    <div class="contenedorfooter">
     <div class="direccion">
         <h5>DIRECCIÓN</h5>
         <p>Pedro Luis de Cabrera 3070<br>Barrio Santa Isabel</p>
     </div>
     <div class="redes">
+        <h5>REDES</h5>
     <a href="https://www.instagram.com/pit.ipem40/" target="_blank" >
             <img src="imagenes/inst.png" alt="logo instagram">
         </a>
@@ -106,7 +114,10 @@
         <a href="https://linktr.ee/pitdeodororoca" target="_blank" >
             <img src="imagenes/link.png" alt="logo linktree">
         </a>
+        
     </div>
+    <div class="copyright"><p><a href="https://www.linkedin.com/in/mar%C3%ADa-victoria-g%C3%B3mez-45953b240/" target="_blank">@María Victoria Gómez</a></p></div>
+</div>
 </footer>
 
 
