--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-    <header>
-    <div class="bar" id="inicio">
+    <header id="inicio">
+    <div class="bar" >
     <nav class="nav">
         <div class="nav-content">
             <div class="logo">
@@ -72,8 +72,8 @@
 </div>
 </div>
 <div class="contenedorflecha">
-<span class="material-symbols-outlined"><a href="#inicio">
-    arrow_upward</a>
+<span class="material-symbols-outlined"> <a href="#inicio">
+    arrow_upward </a>
     </span>
 </div>
 <div class="nosotros" id="nosotros">
