--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>NIVEL SECUNDARIO</p>
     <h1>UN LUGAR PARA PROYECTARSE HACIA EL FUTURO</h1>
 </div>
-    <p class="parrafo">Construí tu propio trayecto formativo y finalizá tus estudios. La propuesta reconoce los recorridos educativos previos  y establece un sistema de promoción por asignaturas de manera tal de permitirte avanzar en función de un régimen de correlatividades.</p>
+    <p class="parrafo">Construí tu propio trayecto formativo y finalizá tus estudios. <span id="ocultar">La propuesta reconoce los recorridos educativos previos  y establece un sistema de promoción por asignaturas de manera tal de permitirte avanzar en función de un régimen de correlatividades.</span></p>
     <button><a href="#nosotros" class="enlaces">VER MÁS</a></button>
 </div>
 
